# Haskell

./: AlgebraicData.hs  Atom-Checking.hs  AwesomeNumber.hs  Ciphers.hs  IO.hs  Lockercheck.hs  README.md  Todo.hs  Tree.hs  balancing.hs  codeWars  codeWars.hs  codeWars1.hs  databases.hs  gettingbetter.hs  test.hs  textJustification.hs  todo  todo.hi  todo.txt
abstraction-patterns/: abstraction-patterns.cabal
abstraction-patterns/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
abstraction-patterns/src/: AbstractionPatterns.hs
